<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_props" android:title="@string/action_props"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_view"
        />
    <item android:id="@+id/action_debug" android:title="@string/action_debug"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_bug_report_black_24dp"
        />
    <item android:id="@+id/action_log_file" android:title="@string/menu_item_log"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_description_black_24dp"
        />
    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        />
</menu>
