<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/aswitch"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="" />

            <ImageView
                android:id="@+id/tracking_service_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/state"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifyResponse"
            android:id="@+id/notifyResponse"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_tab_selected"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/zname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/command"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editZone1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editZone2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editZone3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editZone4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editZone5"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_command"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editZone6"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editCommand6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sendTestMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_command" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/logoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logoff" />

    </LinearLayout>
</ScrollView>